# resume-prediction

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  settings.dev.yml  settings.prod.yml  settings.yml
data/: train.json
src/: dataset.py  inference_job.py  inference_person.py  main.py  server.py  test.py  train.py
src/components/: __init__.py  dataloader.py  dataset.py  record.py
src/data/: __init__.py  dataloader.py  dataset.py  generate.ipynb  split_data.py
src/model/: __init__.py  embedding.py  layers.py  model.py  net.py  predictor.py
src/setting/: __init__.py  manager.py  models.py
src/settings/: __init__.py  manager.py  models.py
src/utils/: __init__.py  model.py  record.py  recorder.py  setting.py  train.py
src/vector_store/: create_index.py  generate_embeddings.py  get_targets.py  insert_document.py  query.py
tests/: test_settings.py
