[project]
name = "person-resume-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dynaconf>=3.2.11",
    "notebook>=7.4.4",
    "prettytable>=3.16.0",
    "pydantic>=2.11.7",
    "ruamel-yaml>=0.18.14",
    "torch>=2.7.1",
    "torchmetrics>=1.7.4",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
    "transformers>=4.53.2",
]

[dependency-groups]
dev = [
    "icecream>=2.1.5",
    "notebook>=7.4.4",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
